@@ -9,4 +9,5 @@ Bug fixes
 -
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
--
+- DataModel tells the StorageAdapters to write only those fields that
+  have been modified or that the adapter didn't require.
